add logo location

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="conteiner">
     	<header>
-    		<img src="Images/Logo.png" alt="logo">
+    		<img class="logo" src="Images/Logo.png" alt="logo">
     		<nav>
     			<ul>
     				<li> 
